<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_libstat"
    tools:context=".RepPageActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96875" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1875" />

    <LinearLayout
        android:id="@+id/bannerContainerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bannerGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/get"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bannerRep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/rep"
            android:textColor="@color/colorPrimaryRed"
            android:textSize="24sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imageViewRepresentativePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="140dp"
        android:maxHeight="140dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRepresentativeHeaderName"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/bannerContainerSmall"
        app:srcCompat="@drawable/ic_person_large"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewRepresentativeHeaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="Jimbob McGee Jr."
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryPurple"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <TextView
        android:id="@+id/textViewRepresentativePartyAndPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="U.S. Representative (Independent Party)"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@id/textViewRepresentativeHeaderName"
        tools:layout_editor_absoluteY="256dp" />

    <View
        android:id="@+id/borderOneRepresentativeHeaderName"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorPrimaryPurple"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/textViewRepresentativeHeaderName"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <View
        android:id="@+id/borderTwoRepresentativeHeaderName"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorPrimaryPurple"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toEndOf="@+id/textViewRepresentativeHeaderName"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <RelativeLayout
        android:id="@+id/relLayoutRepresentativeWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/guideline16">

        <ImageButton
            android:id="@+id/buttonRepresentativeWebsite"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/purple_circle_button"
            app:srcCompat="@drawable/ic_link_24px" />

        <TextView
            android:id="@+id/textViewRepresentativeWebsite"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_below="@+id/buttonRepresentativeWebsite"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/rep_website"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayoutRepresentativePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        >

        <ImageButton
            android:id="@+id/buttonRepresentativePhone"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/purple_circle_button"
            app:srcCompat="@drawable/ic_phone_24px"/>

        <TextView
            android:id="@+id/textViewRepresentativePhone"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_below="@+id/buttonRepresentativePhone"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/rep_phone"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/relLayoutRepresentativeTwitter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" android:paddingTop="30dp"
    app:layout_constraintHorizontal_bias="0.7"
    app:layout_constraintBottom_toTopOf="@+id/guideline18"
    app:layout_constraintEnd_toStartOf="@+id/guideline13"
    app:layout_constraintStart_toStartOf="@+id/guideline11"
    app:layout_constraintTop_toTopOf="@+id/guideline18">

    <ImageButton
        android:id="@+id/buttonRepresentativeTwitter"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/purple_circle_button"
        app:srcCompat="@drawable/ic_twitter" />

    <TextView
        android:id="@+id/textViewRepresentativeTwitter"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_below="@+id/buttonRepresentativeTwitter"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:fontFamily="@font/roboto_condensed_bold"
        android:gravity="center"
        android:text="@string/rep_twitter"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayoutRepresentativeFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline18">

        <ImageButton
            android:id="@+id/buttonRepresentativeFacebook"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/purple_circle_button"
            app:srcCompat="@drawable/ic_f_icon" />

        <TextView
            android:id="@+id/textViewRepresentativeFacebook"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_below="@+id/buttonRepresentativeFacebook"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/rep_facebook"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>